--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "license": "MIT",
   "scripts": {
     "build:web": "nx build web",
-    "serve:web": "nx serve web"
+    "serve:web": "nx serve web",
+    "storybook": "nx run ui:storybook",
+    "storybook:build": "nx run ui:build-storybook",
+    "storybook:serve": "nx run ui:serve-storybook"
   },
   "private": true,
   "dependencies": {
@@ -19,6 +22,8 @@
     "@angular/router": "~18.2.0",
     "@angular/ssr": "~18.2.0",
     "express": "~4.18.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rxjs": "~7.8.0",
     "zone.js": "~0.14.3"
   },
@@ -39,11 +44,19 @@
     "@nx/jest": "20.1.4",
     "@nx/js": "20.1.4",
     "@nx/playwright": "20.1.4",
+    "@nx/storybook": "^20.1.4",
     "@nx/vite": "20.1.4",
     "@nx/web": "20.1.4",
     "@nx/workspace": "20.1.4",
     "@playwright/test": "^1.36.0",
     "@schematics/angular": "~18.2.0",
+    "@storybook/addon-essentials": "^8.2.8",
+    "@storybook/addon-interactions": "^8.2.8",
+    "@storybook/angular": "^8.2.8",
+    "@storybook/core-server": "^8.2.8",
+    "@storybook/jest": "^0.2.3",
+    "@storybook/test-runner": "^0.13.0",
+    "@storybook/testing-library": "^0.2.2",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
@@ -55,6 +68,7 @@
     "@vitest/ui": "^1.3.1",
     "angular-eslint": "^18.3.0",
     "autoprefixer": "^10.4.0",
+    "daisyui": "^4.12.14",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-playwright": "^1.6.2",
@@ -68,6 +82,8 @@
     "postcss": "^8.4.5",
     "postcss-url": "~10.1.3",
     "prettier": "^2.6.2",
+    "storybook": "^8.2.8",
+    "tailwindcss": "^3.4.16",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
