--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "@todo-angular/source",
+  "name": "@todo-app/source",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "build:web": "nx build web",
+    "build": "nx run-many --target=build --all --verbose",
+    "build:web": "nx run web:build --verbose",
+    "build:ui": "nx run ui:build --verbose",
     "serve:web": "nx serve web",
     "storybook": "nx run ui:storybook",
     "storybook:build": "nx run ui:build-storybook",
@@ -52,6 +54,7 @@
     "@schematics/angular": "~18.2.0",
     "@storybook/addon-essentials": "^8.2.8",
     "@storybook/addon-interactions": "^8.2.8",
+    "@storybook/addon-styling-webpack": "^1.0.1",
     "@storybook/angular": "^8.2.8",
     "@storybook/core-server": "^8.2.8",
     "@storybook/jest": "^0.2.3",
@@ -60,6 +63,10 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/express": "4.17.14",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
@@ -67,7 +74,7 @@
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
     "angular-eslint": "^18.3.0",
-    "autoprefixer": "^10.4.0",
+    "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.14",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
@@ -79,7 +86,8 @@
     "jsonc-eslint-parser": "^2.1.0",
     "ng-packagr": "~18.2.0",
     "nx": "20.1.4",
-    "postcss": "^8.4.5",
+    "postcss": "^8.4.49",
+    "postcss-import": "^16.1.0",
     "postcss-url": "~10.1.3",
     "prettier": "^2.6.2",
     "storybook": "^8.2.8",
