--- a/package.json
+++ b/package.json
@@ -52,11 +52,11 @@
     "@nx/workspace": "20.1.4",
     "@playwright/test": "^1.36.0",
     "@schematics/angular": "~18.2.0",
-    "@storybook/addon-essentials": "^8.2.8",
+    "@storybook/addon-essentials": "8.4.6",
     "@storybook/addon-interactions": "^8.2.8",
     "@storybook/addon-styling-webpack": "^1.0.1",
-    "@storybook/angular": "^8.2.8",
-    "@storybook/core-server": "^8.2.8",
+    "@storybook/angular": "8.4.6",
+    "@storybook/core-server": "8.4.6",
     "@storybook/jest": "^0.2.3",
     "@storybook/test-runner": "^0.13.0",
     "@storybook/testing-library": "^0.2.2",
@@ -88,6 +88,7 @@
     "nx": "20.1.4",
     "postcss": "^8.4.49",
     "postcss-import": "^16.1.0",
+    "postcss-preset-env": "^10.1.1",
     "postcss-url": "~10.1.3",
     "prettier": "^2.6.2",
     "storybook": "^8.2.8",
