--- a/package.json
+++ b/package.json
@@ -23,7 +23,12 @@
     "@angular/platform-server": "~18.2.0",
     "@angular/router": "~18.2.0",
     "@angular/ssr": "~18.2.0",
+    "@ngrx/effects": "^18.1.1",
+    "@ngrx/signals": "^18.1.1",
+    "@ngrx/store": "^18.1.1",
+    "@ngrx/store-devtools": "^18.1.1",
     "express": "~4.18.2",
+    "immer": "^10.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rxjs": "~7.8.0",
@@ -39,6 +44,7 @@
     "@angular/compiler-cli": "~18.2.0",
     "@angular/language-service": "~18.2.0",
     "@eslint/js": "^9.8.0",
+    "@ngx-env/builder": "^19.0.2",
     "@nx/angular": "20.1.4",
     "@nx/devkit": "20.1.4",
     "@nx/eslint": "20.1.4",
