--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ngrx/signals": "^18.1.1",
     "@ngrx/store": "^18.1.1",
     "@ngrx/store-devtools": "^18.1.1",
+    "date-fns": "^4.1.0",
     "express": "~4.18.2",
     "immer": "^10.1.1",
     "react": "^18.2.0",
